[package]
name = "nom-xml-derive"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["xml","derive","nom-xml"]
categories = ["parsing","encoding","decoding"]
description = "A Rust crate for simplifying the process of extracting `nom-xml` Documents into structs with fields of various Rust data types."
repository = "https://github.com/RodogInfinite/nom-xml-derive"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.85"
quote = "1.0.26"
syn = {version = "2.0.66", features = ["extra-traits","derive"]}

